Refactor: add @SuppressWarnings("static-method") to applicable classes, streamline null checks, and update logging; enhance preview context handling and update PMD rules
- Add @SuppressWarnings("static-method") to classes with only static or
instance methods not using instance state
- Simplify null and empty checks throughout the codebase for readability
- Update logging in Gantt and data initializer classes for improved
diagnostics
- Refactor CPanelDetailSectionPreview to introduce preview context for
details builder
- Update PMD rules to exclude tech/derbent/api/ from
UnusedPrivateMethod, and update dependency and JDK version in pom.xml
- Remove obsolete imports and redundant suppressions
- Adjust service usage in grid entity component for unified page view
loading