@@ -2,20 +2,19 @@ package tech.derbent.app.kanban.kanbanline.view;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import com.vaadin.flow.component.html.Span;
 import com.vaadin.flow.data.binder.Binder;
-import tech.derbent.api.entityOfProject.domain.CProjectItem;
 import tech.derbent.api.grid.view.CLabelEntity;
 import tech.derbent.api.ui.component.basic.CH3;
 import tech.derbent.api.ui.component.basic.CHorizontalLayout;
 import tech.derbent.api.ui.component.basic.CVerticalLayout;
 import tech.derbent.api.ui.component.enhanced.CComponentBase;
 import tech.derbent.app.kanban.kanbanline.domain.CKanbanColumn;
+import tech.derbent.app.sprints.domain.CSprintItem;
 
 /** CComponentKanbanColumn - Renders a single kanban column with its header and post-it items. */
 public class CComponentKanbanColumn extends CComponentBase<CKanbanColumn> {
@@ -27,10 +26,11 @@ public class CComponentKanbanColumn extends CComponentBase<CKanbanColumn> {
 	private final CVerticalLayout itemsLayout;
 	Logger LOGGER = LoggerFactory.getLogger(CComponentKanbanColumn.class);
 	private Consumer<CComponentKanbanPostit> postitSelectionListener;
-	private List<CProjectItem<?>> projectItems = List.of();
+	private List<CSprintItem> sprintItems = List.of();
 	private final CLabelEntity statusesLabel;
 	private final CH3 title;
 
+	/** Creates the kanban column component and its layout. */
 	public CComponentKanbanColumn() {
 		setPadding(true);
 		setSpacing(true);
@@ -64,6 +64,7 @@ public class CComponentKanbanColumn extends CComponentBase<CKanbanColumn> {
 		binder.forField(this).bind(value -> value, (bean, value) -> {/**/});
 	}
 
+	/** Applies the configured background color for the column. */
 	private void applyBackgroundColor() {
 		final CKanbanColumn column = getValue();
 		final String backgroundColor =
@@ -71,48 +72,31 @@ public class CComponentKanbanColumn extends CComponentBase<CKanbanColumn> {
 		getStyle().set("background-color", backgroundColor);
 	}
 
-	private List<CProjectItem<?>> filterItems(final List<CProjectItem<?>> items) {
+	/** Filters items that should appear in this column. */
+	private List<CSprintItem> filterItems(final List<CSprintItem> items) {
 		LOGGER.debug("Filtering items for kanban column {}", getValue() != null ? getValue().getName() : "null");
 		if (items == null || items.isEmpty()) {
 			return List.of();
 		}
 		final CKanbanColumn column = getValue();
-		if (column == null) {
+		if (column == null || column.getId() == null) {
 			return List.of();
 		}
-		final List<CKanbanColumn> lineColumns = resolveLineColumns();
-		final boolean hasStatusMappings = lineColumns.stream().filter(Objects::nonNull)
-				.anyMatch(entry -> entry.getIncludedStatuses() != null && !entry.getIncludedStatuses().isEmpty());
-		final boolean isFallbackColumn = column.getDefaultColumn() || !hasStatusMappings && isFirstColumn(lineColumns);
-		final Set<Long> includedStatusIds = column.getIncludedStatuses() == null ? Set.of() : column.getIncludedStatuses().stream()
-				.filter(Objects::nonNull).map(status -> status.getId()).filter(Objects::nonNull).collect(Collectors.toSet());
-		final Set<Long> lineStatusIds = isFallbackColumn ? resolveLineStatusIds() : Set.of();
+		final Long columnId = column.getId();
 		return items.stream().filter(Objects::nonNull).filter(item -> {
-			if (item.getStatus() == null || item.getStatus().getId() == null) {
-				return isFallbackColumn;
-			}
-			final Long statusId = item.getStatus().getId();
-			if (!includedStatusIds.isEmpty() && includedStatusIds.contains(statusId)) {
-				return true;
-			}
-			return isFallbackColumn && !lineStatusIds.contains(statusId);
-		}).collect(Collectors.toList());
+			final Long itemColumnId = item.getKanbanColumnId();
+			return itemColumnId != null && itemColumnId.equals(columnId);
+		}).toList();
 	}
 
-	private boolean isFirstColumn(final List<CKanbanColumn> lineColumns) {
-		final CKanbanColumn column = getValue();
-		if (column == null || lineColumns.isEmpty()) {
-			return false;
-		}
-		return lineColumns.get(0).equals(column);
-	}
-
+	/** Propagates a post-it click to the selection listener. */
 	private void on_postit_clicked(final CComponentKanbanPostit postit) {
 		if (postitSelectionListener != null) {
 			postitSelectionListener.accept(postit);
 		}
 	}
 
+	/** Updates the column UI when its value changes. */
 	@Override
 	protected void onValueChanged(final CKanbanColumn oldValue, final CKanbanColumn newValue, final boolean fromClient) {
 		LOGGER.debug("Kanban column value changed from {} to {}", oldValue != null ? oldValue.getName() : "null",
@@ -127,6 +111,7 @@ public class CComponentKanbanColumn extends CComponentBase<CKanbanColumn> {
 		refreshItems();
 	}
 
+	/** Refreshes the column UI components. */
 	@Override
 	protected void refreshComponent() {
 		applyBackgroundColor();
@@ -135,6 +120,7 @@ public class CComponentKanbanColumn extends CComponentBase<CKanbanColumn> {
 		refreshItems();
 	}
 
+	/** Refreshes the header title and default badge. */
 	private void refreshHeader() {
 		final CKanbanColumn column = getValue();
 		title.setText(column != null ? column.getName() : "");
@@ -148,16 +134,18 @@ public class CComponentKanbanColumn extends CComponentBase<CKanbanColumn> {
 		}
 	}
 
+	/** Refreshes the item cards inside the column. */
 	private void refreshItems() {
 		LOGGER.debug("Refreshing items for kanban column {}", getValue() != null ? getValue().getName() : "null");
 		itemsLayout.removeAll();
-		for (final CProjectItem<?> item : filterItems(projectItems)) {
+		for (final CSprintItem item : filterItems(sprintItems)) {
 			final CComponentKanbanPostit postit = new CComponentKanbanPostit(item);
 			postit.addClickListener(event -> on_postit_clicked(postit));
 			itemsLayout.add(postit);
 		}
 	}
 
+	/** Refreshes the status summary label. */
 	private void refreshStatuses() {
 		LOGGER.debug("Refreshing statuses label for kanban column {}", getValue() != null ? getValue().getName() : "null");
 		final CKanbanColumn column = getValue();
@@ -170,39 +158,15 @@ public class CComponentKanbanColumn extends CComponentBase<CKanbanColumn> {
 		statusesLabel.setText(statuses);
 	}
 
-	private List<CKanbanColumn> resolveLineColumns() {
-		final CKanbanColumn column = getValue();
-		if (column == null || column.getKanbanLine() == null || column.getKanbanLine().getKanbanColumns() == null) {
-			return List.of();
-		}
-		return column.getKanbanLine().getKanbanColumns().stream().filter(Objects::nonNull).sorted((left, right) -> {
-			if (left.getItemOrder() == null && right.getItemOrder() == null) {
-				return 0;
-			}
-			if (left.getItemOrder() == null) {
-				return 1;
-			}
-			if (right.getItemOrder() == null) {
-				return -1;
-			}
-			return left.getItemOrder().compareTo(right.getItemOrder());
-		}).collect(Collectors.toList());
-	}
-
-	private Set<Long> resolveLineStatusIds() {
-		final List<CKanbanColumn> lineColumns = resolveLineColumns();
-		if (lineColumns.isEmpty()) {
-			return Set.of();
-		}
-		return lineColumns.stream().map(CKanbanColumn::getIncludedStatuses).filter(Objects::nonNull).flatMap(List::stream).filter(Objects::nonNull)
-				.map(status -> status.getId()).filter(Objects::nonNull).collect(Collectors.toSet());
-	}
-
-	public void setItems(final List<CProjectItem<?>> items) {
+	/** Sets the items displayed in this column. */
+	public void setItems(final List<CSprintItem> items) {
 		LOGGER.debug("Setting items for kanban column {}", getValue() != null ? getValue().getName() : "null");
-		projectItems = items == null ? List.of() : List.copyOf(items);
+		sprintItems = items == null ? List.of() : List.copyOf(items);
 		refreshItems();
 	}
 
-	public void setPostitSelectionListener(final Consumer<CComponentKanbanPostit> listener) { postitSelectionListener = listener; }
+	/** Sets the selection listener for post-it clicks. */
+	public void setPostitSelectionListener(final Consumer<CComponentKanbanPostit> listener) {
+		postitSelectionListener = listener;
+	}
 }
